[gd_scene load_steps=15 format=2]

[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/enemy.png" type="Texture" id=4]
[ext_resource path="res://Effects/DashGhost.tres" type="Material" id=5]
[ext_resource path="res://assets/peggle-bounce.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 31, 40 )

[sub_resource type="Animation" id=10]
resource_name = "HDash"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.875, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "VDash"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "default"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 40, 27 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 18.9999
height = 58.0002

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 5 )
texture = ExtResource( 4 )

[node name="WorldCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/HDash = SubResource( 10 )
anims/Jump = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/VDash = SubResource( 13 )
anims/default = SubResource( 14 )

[node name="CameraRemoteTransform" type="RemoteTransform2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 4
collision_mask = 8

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, 38 )
collision_layer = 2
collision_mask = 16

[node name="Collider" parent="Hitbox" index="0"]
modulate = Color( 0.666667, 0.780392, 0.121569, 1 )
position = Vector2( 0, -9 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="DashTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[node name="GhostTimer" type="Timer" parent="DashTimer"]
wait_time = 0.05

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ComboAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashTimer/GhostTimer" to="." method="_on_GhostTimer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
